2007-10-31  Adam Fedor  <fedor@gnu.org>

	* Version 1.0.0
