@@ -1,5 +1,5 @@
 
-PictureFrame vesion 1.0.0 is available.
+PictureFrame version 1.0.0 is available.
 
 PictureFrame.app
 ======================
@@ -24,7 +24,7 @@ Initial release
 Where to Get it
 ===============
 
-http://savannah.nongnu.org/download/gap/PictureFrame-1.0.0.tar.gz
+http://www.nongnu.org/gap/pictureframe/
 
 Or via CVS:
 
