@@ -1,3 +1,8 @@
+2007-11-06  Adam Fedor  <fedor@gnu.org>
+
+	* PhotoView.m, PreferencesController.m: Add Keyword and Photo Path
+	preferences. Fix possible double release.
+
 2007-10-31  Adam Fedor  <fedor@gnu.org>
 
 	* Version 1.0.0
